--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="media.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!----font awesome link-->
-    <link rel="icon" href="images/p-logo.jpeg">
+    <link rel="icon" href="images/IMG_6937_1.jpg">
 </head>
 <body>
     <div id="container">
@@ -30,8 +30,8 @@
                 <!---nav buttons-->
                 <div class="social-links">
                     <ul>
-                        <a href="#linkedin"><i class="fa fa-linkedin"></i></a>
-                        <a href="#instagram"><i class="fa fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/sekema/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://www.instagram.com/sekema954/" target="_blank"><i class="fa fa-instagram"></i></a>
                         <a href="#facebook"><i class="fa fa-facebook"></i></a>
                     </ul>
                 </div>
@@ -58,8 +58,8 @@
                 <li><a href="#contact">CONTACT</a></li>
                 <div class="social-links">
                     <ul>
-                        <a href="#linkedin"><i class="fa fa-linkedin"></i></a>
-                        <a href="#instagram"><i class="fa fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/sekema/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://www.instagram.com/sekema954/" target="_blank"><i class="fa fa-instagram"></i></a>
                         <a href="#facebook"><i class="fa fa-facebook"></i></a>
                     </ul>
                 </div>
@@ -90,7 +90,7 @@
                             <p> Hello I am a passionate individual with a deep interest in the world of computer science. Currently pursuing my bachelor at Kennesaw State University. I have a diverse set of hobbies that add color to my life. One of this creative outlets is art. I also enjoy the thrill of soccer. Whether as a player or a spectator. Video games also play a significant role in my leisure time. The ability to create and solve problems, fuels my passion for the field of computer science. In summary, I am not just a computer science major but a well-rounded individual with a love for art, soccer, video games, and the intricacies of coding.</p>
                         </div>
                         <div class="resume-download">
-                            <a href="https://docs.google.com/document/d/18kGHqhv8Mkoh0_ZxYWj-j9mFxLp74mHnnMVat-UvfEI/edit?usp=sharing" target="_blank"> Resume
+                            <a href="https://docs.google.com/document/d/18kGHqhv8Mkoh0_ZxYWj-j9mFxLp74mHnnMVat-UvfEI/edit?usp=sharing" target="_blank">Resume
                                 <i class="fa fa-arrow-right" aria-hidden="true"></i>
                             </a>
                         </div>
@@ -125,43 +125,43 @@
 
                         <div class="outer-circle skill2">
                             <div class="inner-circle">
-                                <p>HTML</p>
+                                <p>CSS</p>
                             </div>
                         </div>
 
                         <div class="outer-circle skill2">
                             <div class="inner-circle">
-                                <p>HTML</p>
+                                <p>JavaScript</p>
                             </div>
                         </div>
 
                         <div class="outer-circle skill2">
                             <div class="inner-circle">
-                                <p>HTML</p>
+                                <p>React</p>
                             </div>
                         </div>
 
                         <div class="outer-circle skill2">
                             <div class="inner-circle">
-                                <p>HTML</p>
+                                <p>Power bi</p>
                             </div>
                         </div>
 
                         <div class="outer-circle skill2">
                             <div class="inner-circle">
-                                <p>HTML</p>
+                                <p>Tableau</p>
                             </div>
                         </div>
 
                         <div class="outer-circle skill2">
                             <div class="inner-circle">
-                                <p>HTML</p>
+                                <p>Python</p>
                             </div>
                         </div>
 
                         <div class="outer-circle skill2">
                             <div class="inner-circle">
-                                <p>HTML</p>
+                                <p>SQL</p>
                             </div>
                         </div>
                     </div>
@@ -192,10 +192,10 @@
                 <div class="project-centered tab-1-content">
                     <div class="project1 project-card">
                         <div class="project-btns">
-                            <a href="https://sekema954.github.io/serene-beauty/">
+                            <a href="https://sekema954.github.io/serene-beauty/" target="_blank">
                                 <button>Go Live</button>
                             </a>
-                            <a href="https://github.com/sekema954/serene-beauty.git">
+                            <a href="https://github.com/sekema954/serene-beauty.git" target="_blank">
                                 <button>Source Code</button>
                             </a>
                         </div>
@@ -204,10 +204,10 @@
                     <!---project 2-->
                     <div class="project2 project-card">
                         <div class="project-btns">
-                            <a href="https://sekema954.github.io/furniture/">
+                            <a href="https://sekema954.github.io/nail-site/" target="_blank">
                                 <button>Go Live</button>
                             </a>
-                            <a href="https://github.com/sekema954/furniture.git">
+                            <a href="https://github.com/sekema954/nail-site.git" target="_blank">
                                 <button>Source Code</button>
                             </a>
                         </div>
@@ -217,10 +217,10 @@
                     <!---project 3-->
                     <div class="project3 project-card">
                         <div class="project-btns">
-                            <a href="https://sekema954.github.io/nailed-it/">
+                            <a href="https://sekema954.github.io/nailed-it/" target="_blank">
                                 <button>Go Live</button>
                             </a>
-                            <a href="https://github.com/sekema954/nailed-it.git">
+                            <a href="https://github.com/sekema954/nailed-it.git" target="_blank">
                                 <button>Source Code</button>
                             </a>
                         </div>
@@ -232,10 +232,10 @@
                 <div class="project-centered tab-2-content">
                     <div class="project4 project-card">
                         <div class="project-btns">
-                            <a href="https://sekema954.github.io/movieArchive/">
+                            <a href="https://sekema954.github.io/movieArchive/" target="_blank">
                                 <button>Go Live</button>
                             </a>
-                            <a href="https://github.com/sekema954/movieArchive.git">
+                            <a href="https://github.com/sekema954/movieArchive.git" target="_blank">
                                 <button>Source Code</button>
                             </a>
                         </div>
@@ -244,10 +244,10 @@
                     <!---project 5-->
                     <div class="project5 project-card">
                         <div class="project-btns">
-                            <a href="https://sekema954.github.io/ps5-landing-page/">
+                            <a href="https://sekema954.github.io/ps5-landing-page/" target="_blank">
                                 <button>Go Live</button>
                             </a>
-                            <a href="https://github.com/sekema954/ps5-landing-page.git">
+                            <a href="https://github.com/sekema954/ps5-landing-page.git" target="_blank">
                                 <button>Source Code</button>
                             </a>
                         </div>
@@ -257,10 +257,10 @@
                     <!---project 6-->
                     <div class="project6 project-card">
                         <div class="project-btns">
-                            <a href="https://sekema954.github.io/RossStores/">
+                            <a href="https://sekema954.github.io/RossStores/" target="_blank">
                                 <button>Go Live</button>
                             </a>
-                            <a href="https://github.com/sekema954/RossStores.git">
+                            <a href="https://github.com/sekema954/RossStores.git" target="_blank">
                                 <button>Source Code</button>
                             </a>
                         </div>
@@ -272,10 +272,10 @@
                 <div class="project-centered tab-3-content">
                     <div class="project7 project-card">
                         <div class="project-btns">
-                            <a href="https://sekema954.github.io/lumalearningcenter/">
+                            <a href="https://sekema954.github.io/lumalearningcenter/" target="_blank">
                                 <button>Go Live</button>
                             </a>
-                            <a href="https://github.com/sekema954/lumalearningcenter.git">
+                            <a href="https://github.com/sekema954/lumalearningcenter.git" target="_blank">
                                 <button>Source Code</button>
                             </a>
                         </div>
@@ -284,10 +284,10 @@
                     <!---project 8-->
                     <div class="project8 project-card">
                         <div class="project-btns">
-                            <a href="https://sekema954.github.io/thrive-therapy/">
+                            <a href="https://sekema954.github.io/thrive-therapy/" target="_blank">
                                 <button>Go Live</button>
                             </a>
-                            <a href="https://github.com/sekema954/thrive-therapy.git">
+                            <a href="https://github.com/sekema954/thrive-therapy.git" target="_blank">
                                 <button>Source Code</button>
                             </a>
                         </div>
@@ -346,12 +346,12 @@
                 <h1>Samuel Ekema</h1>
             </div>
             <div class="social-links">
-                <a href="http://www.linkedin.com/in/sekema" target="_blank">
+                <a href="https://www.linkedin.com/in/sekema/" target="_blank">
                     <i class="fa fa-linkedin" aria-hidden="true"></i>
                 </a>
                 <i class="fa fa-facebook" aria-hidden="true"></i>
 
-                <a href="https://www.instagram.com/sekema954/">
+                <a href="https://www.instagram.com/sekema954/" target="_blank">
                     <i class="fa fa-instagram" aria-hidden="true"></i>
                 </a>
                 <div class="watermark">
